集成限流组件sentinel

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <description>SpringCloudAlibaba集成示例</description>
     <modules>
         <module>provider/showcase-provider</module>
+        <module>consumer/show-consumer</module>
     </modules>
 </project>
 
