--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.yan</groupId>
+    <groupId>org.yan.sca</groupId>
     <artifactId>spring-cloud-alibaba</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -11,6 +11,7 @@
     <name>Spring-Cloud-Alibaba</name>
     <description>SpringCloudAlibaba集成示例</description>
     <modules>
+        <module>module/parent</module>
         <module>provider/showcase-provider</module>
         <module>consumer/show-consumer</module>
     </modules>
